Fix for zxing of slots and overflow hidden for container

--- a/code/pages/scanPage/scan.css
+++ b/code/pages/scanPage/scan.css
@@ -3,12 +3,17 @@
     background: var(--primary-backgtound-color);
 }
 
+#scanner-placeholder {
+    overflow: hidden;
+}
+
 #scanner-placeholder webc-switch > * {
     position: absolute;
     left: 0.5em; right: 0.5em;
     bottom: 1em;
     text-align: center;
     color: var(--secondary-background-color);
+    z-index: 99;
 }
 
 #scanner-placeholder webc-switch > *.message {
